# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "image_resize_and_combine"
description = "Wasm functions that resize and combine images"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/davesag/image_resize_and_combine.git"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.24.7"
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.64", features = ['console'] }
imageproc = "0.23.0"
